<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.com.corpico.appcorpico.orders.OrderPendienteActivity">
    <item
        android:id="@+id/action_filtrar"
        android:icon="@drawable/ic_filtrar"
        android:orderInCategory="2"
        android:title="@string/action_filtrar"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:orderInCategory="3"
        android:title="@string/action_map"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/action_buscar"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>