<?xml version="1.0" encoding="utf-8"?>
    <menu  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ar.com.corpico.appcorpico.orders.presentation.Detail_OT">
        <item
            android:id="@+id/action_editarOrder"
            android:icon="@drawable/ic_edit"
            android:orderInCategory="1"
            android:title="@string/action_editar"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_photoOrder"
            android:icon="@drawable/ic_camera"
            android:orderInCategory="2"
            android:title="@string/action_photo"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
</menu>